--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         style="display: block; margin-left: auto; margin-right: auto"
       ></canvas>
       <canvas id="canvas2" style="display: none; margin-left: auto; margin-right: auto"></canvas>
-      <h2 id="answer" style="text-align: center"></h2>
+      <h2 id="answer" style="text-align: center">　</h2>
+      <p style="text-align: center">枠に問題文を収めて画面をタッチしてください</p>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
