--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" style="height: 100%">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ロマンシング サガ2 リベンジオブザセブン 帝国大学 帝国試験 不正ツール</title>
   </head>
-  <body>
-    <div id="app">
+  <body style="height: 100%">
+    <div id="app" style="height: 100%">
       <video id="video" autoplay muted playsinline hidden></video>
       <canvas
         id="canvas1"
