--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ロマンシング サガ2 リベンジオブザセブン 帝国大学 帝国試験 不正ツール</title>
+    <base target="_blank" />
   </head>
   <body style="height: 100%">
     <div id="app" style="height: 100%">
@@ -17,6 +18,13 @@
       <canvas id="canvas2" style="display: none; margin-left: auto; margin-right: auto"></canvas>
       <h2 id="answer" style="text-align: center">　</h2>
       <p style="text-align: center">枠に問題文を収めて画面をタッチしてください</p>
+      <footer style="position: fixed; bottom: 0; width: 100%; text-align: right">
+        <p style="padding-right: 1rem">
+          試験データ: <a href="https://game8.jp/romasaga2-remake/649319">Game8</a> 連絡先:
+          <a href="https://x.com/ebith">@ebith</a>,
+          <a href="https://github.com/ebith/romancing-saga-2-imperial-university-exams-cheating-tool">GitHub</a>
+        </p>
+      </footer>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
